--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2021"
 
 [dependencies]
 rocket = { version = "0.5.0-rc.2", features = ["json"] }
+serde_json = "1.0.91"
+reqwest = { version = "0.11", features = ["json"] }
+dotenv = "0.15.0"
+dotenv_codegen = "0.15.0"
