--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,3 +11,4 @@ serde_json = "1.0.91"
 reqwest = { version = "0.11", features = ["json"] }
 dotenv = "0.15.0"
 dotenv_codegen = "0.15.0"
+tokio = "1.23.0"
