--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,3 +12,6 @@ reqwest = { version = "0.11", features = ["json"] }
 dotenv = "0.15.0"
 dotenv_codegen = "0.15.0"
 tokio = "1.23.0"
+
+[dev-dependencies]
+mockall = "0.11.3"
