--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,6 +12,8 @@ reqwest = { version = "0.11", features = ["json"] }
 dotenv = "0.15.0"
 dotenv_codegen = "0.15.0"
 tokio = "1.23.0"
+log = "0.4.17"
+env_logger = "0.10.0"
 
 [dev-dependencies]
 mockall = "0.11.3"
