--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,6 +14,7 @@ dotenv_codegen = "0.15.0"
 tokio = "1.23.0"
 log = "0.4.17"
 env_logger = "0.10.0"
+thiserror = "1.0.38"
 
 [dev-dependencies]
 mockall = "0.11.3"
